# chess_wizard

./: CMakeCache.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  chess_wizard  chess_wizard_cli.py  chess_wizard_spec.json  cmake_install.cmake  debug_script.txt  input.txt  liblibchesswizard_shared.dylib  test_input.txt
include/: chess_wizard_api.h  common.h  constants.h  types.h  utils.h
src/: api.cpp  attack.cpp  attack.h  bitboard.cpp  bitboard.h  board.cpp  board.h  book.cpp  book.h  engine.cpp  engine.h  evaluate.cpp  evaluate.h  main.cpp  move.cpp  move.h  movegen.cpp  movegen.h  nnue.cpp  nnue.h  position.cpp  position.h  search.cpp  search.h  syzygy.cpp  tb_probe.cpp  tb_probe.h  tt.cpp  tt.h  types.h  uci.h  zobrist.cpp  zobrist.h
src/engine/: attack.h  board.cpp  board.h  evaluation.h  move.cpp  movegen.h  search.cpp  search.h  syzygy.cpp  syzygy.h  uci.cpp
src/gui/: chessboardwidget.cpp  chessboardwidget.h  mainwindow.cpp  mainwindow.h  sidepanel.cpp  sidepanel.h
src/storage/: opening_book.h  sqlite_manager.cpp  sqlite_manager.h
tests/: perft_tests.cpp
tools/: book_converter.py  calibrate.py  generate_magic.py  nnue_convert.py
